<resources>
    <string name="app_name">Дневник спортсмена</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Дневник спортсмена</string>
    <string name="nav_header_subtitle">silent_master@mail.ru</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Главная</string>
    <string name="menu_run">Шагомер</string>
    <string name="menu_dop_title">Дополнительное</string>
    <string name="action_settings">Настройки</string>

    <string name="steps">Кол-во шагов:</string>
    <string name="add_training">Добавьте свою тренировку</string>
    <string name="exercises">Упражнение:</string>
    <string name="approaches">Кол-во подходов:</string>
    <string name="repetitions">Кол-во повторений:</string>
</resources>