<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/custom_dialog_round"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/exercises"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/input_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/approaches"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/input_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        tools:ignore="LabelFor,TextFields" />

    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/repetitions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/input_text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        tools:ignore="LabelFor,TextFields">

        <requestFocus />
    </EditText>
</LinearLayout>